# claude-gui

./: .gitignore  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/indexer/: jsonl_reader.py  scanner.py  schema.sql  watcher.py
backend/app/routers/: chat.py  commands.py  feedback.py  files.py  mcp.py  memory.py  plans.py  projects.py  search.py  sessions.py  stats.py  tasks.py  todos.py
backend/app/services/: claude_session.py  pricing.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  CommandPalette.tsx  ErrorBoundary.tsx  FeedbackButton.tsx  FolderPicker.tsx  HistoryAssistantGroup.tsx  MemoryEditor.tsx  MessageRow.tsx  ShortcutsOverlay.tsx  ThemeToggle.tsx
frontend/src/components/blocks/: EditDiffBlock.tsx  MarkdownBlock.tsx  ThinkingBlock.tsx  ToolResultCard.tsx  ToolUseCard.tsx
frontend/src/components/chat/: AskUserQuestionPrompt.tsx  AssistantTurnGroup.tsx  BlockList.tsx  Composer.tsx  FileMentionMenu.tsx  FilePreviewContext.tsx  FileTreePanel.tsx  McpStatusPanel.tsx  ModeBadge.tsx  PermissionPrompt.tsx  PlanExitPrompt.tsx  (+2 more)
frontend/src/hooks/: useChatStream.ts  useCwdFiles.ts  useMcpStatus.ts  useShortcuts.ts  useSlashCommands.ts  useTheme.ts
frontend/src/lib/: api.ts  messagesToTurns.ts  toast.ts
frontend/src/pages/: ChatPage.tsx  MemoryPage.tsx  PlansPage.tsx  SearchPage.tsx  SessionPage.tsx  StatsPage.tsx  TasksPage.tsx  TodosPage.tsx
