[project]
name = "claude-gui-backend"
version = "0.1.0"
description = "Local GUI client manager for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "watchfiles>=0.22",
    "sse-starlette>=2.1",
    "orjson>=3.10",
    "claude-agent-sdk>=0.2.80",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
